--- a/01-my-library-practice/pom.xml
+++ b/01-my-library-practice/pom.xml
@@ -51,12 +51,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			
 		</dependency>
-		<dependency>
+	<dependency>
 			<groupId>com.mchange</groupId>
 			<artifactId>c3p0</artifactId>
-			<version>0.9.5.2</version>
+			 <version>[0.9.5.3,)</version>
 		</dependency>
-		
 		
 		
 		
