--- a/my-fast-food-web-shop/src/main/resources/application.properties
+++ b/my-fast-food-web-shop/src/main/resources/application.properties
@@ -7,3 +7,7 @@ pizzaL=460
 pizzaXL=580
 pepsi=238
 juice=250
+miha.pass=miha2810
+dunja.pass=dunja1311
+zvezdan.pass=zvezdan2204
+dragana.pass=dragana17080
