--- a/my-fast-food-web-shop/src/main/resources/application.properties
+++ b/my-fast-food-web-shop/src/main/resources/application.properties
@@ -8,6 +8,6 @@ pizzaXL=580
 pepsi=238
 juice=250
 miha.pass=miha2810
-dunja.pass=dunja1311
+dunja.pass={bcrypt}$2y$12$hr6BLc71bVFYAHxJv2CqqOIJlNqBJgyBUxaAQiCOy3dZCgIbZLZ1m
 zvezdan.pass=zvezdan2204
 dragana.pass=dragana17080
