#adding checks for new products on the product list #format classes with Execom formatter

--- a/my-fast-food-web-shop/src/main/resources/application.properties
+++ b/my-fast-food-web-shop/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
+capricioza="hum+cheese+ketchup"
 pizzaM=270
 pizzaL=460
 pizzaXL=580
