--- a/my-fast-food-web-shop/src/main/resources/application.properties
+++ b/my-fast-food-web-shop/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 capricioza="hum+cheese+ketchup"
+vegetariana="cheese+ketchup+olives+mushrooms"
 pizzaM=270
 pizzaL=460
 pizzaXL=580
